# deepfake-ecg

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
deepfakeecg/: __init__.py  deepfakeecg.py  generate.py
deepfakeecg/models/: __init__.py  pulse2pulse.py
examples/: generate_as_numpy.py  generate_to_file.py  simple.py
